[package]
name = "networking"
version = "0.1.2"
authors = ["julian lazaras <lazaras@pdx.edu>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["artifice", "rsa", "encryption"]
repository = "https://github.com/artifice-network/networking"

description = "networking library that underpins the artifice network"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.3.0"
serde_derive = "1.0.114"
serde_json = "1.0.56"
serde = "1.0.114"
num-bigint-dig = "0.6.0"
rust-crypto = "0.2.36"
rand = "0.7.3"
futures = "0.3.5"
tokio = {version = "0.2.21", features = ["full"]}